# cedenar_anomalies

./: .gitignore  .pre-commit-config.yaml  PipelineExecutionInference.sh  PipelineExecutionTrain.sh  README.md  alembic.ini  docker-compose.yml  environment.yml  install.md  pyproject.toml  run_ngrok_for_looker.py  setup.py  tasks.py
cedenar_anomalies/: main.py
cedenar_anomalies/application/: inference.py  load_from_api .py  load_inference_to_db.py  load_to_anomalia_db.py  load_to_db .py  load_to_db.py  make_dataset.py  make_inference_dataset.py  make_train_dataset.py  predict_clusters.py  send_to_BQ.py  send_to_sheet.py  train.py  train_clusters.py
cedenar_anomalies/data/: data_cleaner.py  data_processor.py  make_dataset.py
cedenar_anomalies/utils/: async_alembic.py  config.py  logging_config.py  paths.py
data/processed/: dataset_limpio_2023_report.json
data/raw/: api_result.json  (+1 more)
migrations/: env.py
models/: pipe_puntaje.pkl  pipeline_CE.pkl  pipeline_OC.pkl  pipeline_SU.pkl
notebooks/: 1_Exploratoria_CEDENAR_Zentry_OPEN_2023_frank.ipynb  2_Limpieza_CEDENAR_usu_od_2023t.ipynb  2_Limpieza_CEDENAR_usu_od_2023t_frank.ipynb  3_Entrenamiento_Clasificacion_anomalia_Propensa_CEDENAR.0.2.1.ipynb  4_Clustering_Entrenamiento_Clasificacion_anomalia_Propensa.ipynb  4_Clustering_Entrenamiento_Clasificacion_anomalia_Propensa_CEDENAR.ipynb  Entrenamiento_Clasificacion_anomalia_Propensa_CEDENAR.0.2.1.ipynb  Exploratoria_CEDENAR_Zentry_OPEN.0.1.ipynb  Exploratoria_CEDENAR_Zentry_OPEN_2023.ipynb  LGBM_class.ipynb  api_covertion.ipynb  validation_datasets.ipynb
(+78 files in other folders)
