[tool.poetry]
name = "cedenar_anomalies"
version = "0.1.0"
description = "Análisis y procesamiento de datos para identificar anomalías mediante clustering difuso"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cedenar_anomalies"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = ">=2.2.3,<3.0.0"
fuzzy-c-means = ">=1.7.2,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
scikit-learn = ">=1.6.1,<2.0.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
invoke = "^2.2.0"
black = "^24.0.0"
nbdime = "^3.2.0"
plotly = "^5.18.0"
pyjanitor = "^0.27.0"
pyprojroot = "^0.3.0"
openpyxl = "^3.1.5"
pandas-stubs = "^2.2.3.250308"
alembic = "^1.15.2"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
greenlet = "^3.2.1"
python-dotenv = "^1.1.0"
aiohttp = "^3.11.18"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pylint = "^3.3.2"
pytest = "^8.3.4"
coverage = "^7.6.10"
pre-commit = "^4.1.0"
ruff = "^0.9.10"

[tool.poetry.scripts]
cedenar = "cedenar_anomalies.main:main"

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["I", "E501", "E4", "E7", "E9", "F", "C901"]
ignore = ["E721"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"